--- a/app/templates/dashboard/index.html
+++ b/app/templates/dashboard/index.html
@@ -63,8 +63,8 @@
     <a href="/plants/add" class="btn btn-primary">
       Add Plant
     </a>
-    <a href="{{ url_for('web.index') }}" class="btn btn-secondary">
-      Ask AI Assistant
+    <a href="{{ url_for('web.ask_ai') }}" class="btn btn-secondary">
+      Care Assistant
     </a>
     <a href="/plants" class="btn btn-secondary">
       View All Plants
